<resources>
    <string name="app_name">CarControl</string>
    <string name="dive_mode">驾驶模式</string>
    <string name="driving_mileage">续航里程显示</string>
    <string name="worm_mode">蠕行模式</string>
    <string name="maintain_time">保养时间设置（月）</string>
    <string name="maintain_distance">保养距离设置（km）</string>
    <string name="maintain_tips">保养提醒</string>
    <string name="invalid">--</string>
    <string name="unit_consumption">kWh/100km</string>
    <string name="unit_speed">km/h</string>
    <string name="data_reset">数据重置</string>
    <string name="driving_mode">驾驶设置</string>
    <string name="maintenance">维修保养</string>
    <string name="light_control">灯光控制</string>
    <string name="travel_information">行程信息</string>
    <string name="normal_mode">正常模式</string>
    <string name="economic_model">经济</string>
    <string name="unlock_when_parking">驻车自动解锁</string>
    <string name="low_speed_pedestrian_warning">低速行人报警</string>
    <string name="the_vehicle_continues_to_move">车辆再行驶 </string>
    <string name="kilometers_need_maintenance">" 公里需要保养"</string>
    <string name="hourly_maintenance_required">" 小时需要保养"</string>
    <string name="maintenance_mileage">保养剩余里程</string>
    <string name="maintenance_remaining_time">保养剩余时间</string>
    <string name="long_term_memory">长期记忆</string>
    <string name="short_term_memory">短期记忆</string>
    <string name="travel_mileage">行驶里程</string>
    <string name="travel_time">行驶时间</string>
    <string name="average_power_consumption">平均电耗</string>
    <string name="average_velocity_speed">平均车速</string>
    <string name="day">天</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="clear">清除</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="clear_history_driving_data">是否清除历史行车数据？</string>
    <string name="complete">完成</string>
    <string name="please_maintain">请尽快保养</string>
    <string name="is_complete_maintain">是否已经完成保养？</string>
    <string name="maintenance_setting_permissions">保养设置权限仅限售后人员操作</string>
    <string name="exceeding_maintenance_mileage">累计车辆行驶里程已超过保养里程\n请尽快保养</string>
    <string name="exceeding_maintenance_time">累计车辆行驶时间已超过保养时间\n请尽快保养</string>
    <string name="safety_and_maintenance">安全&amp;维护</string>
    <string name="intelligent_driving">智能驾驶</string>
    <string name="energy_manage">能量管理</string>
    <string name="car_set">车辆设置</string>
    <string name="intelligent_model">智能</string>
    <string name="individuality_mode">个性化</string>
    <string name="power_steering_mode">助力转向模式</string>
    <string name="handiness">轻便</string>
    <string name="standard">标准</string>
    <string name="heavy_load">重载</string>
    <string name="automatic_parking">自动驻车</string>
    <string name="brake_disc_wiping">制动盘擦拭</string>
    <string name="driving_intensity">驾驶驱动强度</string>
    <string name="energy_recovery_intensity">能量回收强度</string>
    <string name="welcome_to_unlock">迎宾解锁</string>
    <string name="wiper_interval">雨刮间歇时间</string>
    <string name="accompany_me_home">伴我回家</string>
    <string name="key_backlight_brightness">按键背光亮度</string>
    <string name="charging_current_limitation">充电电流限制</string>
    <string name="target_charge_capacity">充电目标电量</string>
    <string name="charging_mode">充电模式</string>
    <string name="immediate_charge">立即充电</string>
    <string name="reservation_charging">预约充电</string>
    <string name="lane_departure_warning">车道偏离预警</string>
    <string name="warning_and_vibration">预警并振动</string>
    <string name="vibration">仅振动</string>
    <string name="tire_pressure_learning">胎压学习</string>
    <string name="learning">学习中</string>
    <string name="vehicle_power_off">车辆下电</string>
    <string name="maintain_mode">维修模式</string>
    <string name="trailer_mode">拖车模式</string>
    <string name="electronic_parking_mode">电子驻车模式</string>
    <string name="lane_correction_assistance">车道纠偏辅助</string>
    <string name="blind_spot_detection">盲区监测</string>
    <string name="warning_only">仅预警</string>
    <string name="brake_only">仅制动</string>
    <string name="early_warning_and_braking">预警并制动</string>
    <string name="door_opening_warning">开门预警</string>
    <string name="rear_collision_warning">后向碰撞预警</string>
    <string name="intelligent_rate_limiting_aid">智能限速辅助</string>
    <string name="away_from_blocking">远离闭锁</string>
    <string name="blocking_horn">闭锁喇叭</string>
    <string name="gear_1">1档</string>
    <string name="gear_2">2档</string>
    <string name="gear_3">3档</string>
    <string name="gear_4">4档</string>
    <string name="gear_5">5档</string>
    <string name="seconds_30">30秒</string>
    <string name="seconds_60">60秒</string>
    <string name="seconds_90">90秒</string>
    <string name="seconds_120">120秒</string>
    <string name="tv_monday">周一</string>
    <string name="tv_tuesday">周二</string>
    <string name="tv_wednesday">周三</string>
    <string name="tv_thursday">周四</string>
    <string name="tv_friday">周五</string>
    <string name="tv_saturday">周六</string>
    <string name="tv_sunday">周日</string>
    <string name="close">关闭</string>
    <string name="emergency_lane_keeping">紧急车道保持</string>
    <string name="lcc_lane_keeping">LCC车道居中辅助</string>
    <string name="astern_traverse_warning">后方横向穿行预警</string>
    <string name="speed_limit_identification_aid">限速标识识别</string>
    <string name="over_speed_warning">超速报警提示</string>
    <string name="cruise_assist">巡航辅助</string>
    <string name="lane_departure_assist">车道偏离预警及纠正</string>
    <string name="forward_warning_aid">前向主动安全辅助</string>
    <string name="backward_blind_aid">后向盲区辅助</string>
    <string name="Charge_start_date">充电开始日期</string>
    <string name="Charging_start_or_end_time">充电开始/结束时间</string>
    <string name="worm_mode_tips">启动该功能后，车辆能在复杂路况下维持稳定的低速行驶</string>
    <string name="automatic_parking_tips">启动该功能后，在停车等候时系统会自动启动驻车制动，避免溜车</string>
    <string name="i_see">我知道了</string>
    <string name="power_off_fail">车辆下电失败，请稍后再试！</string>
    <string name="battery_shut_down">高压电池即将关闭，车辆用电系统将停止\n工作，若需重新上高压请踩刹车踏板</string>
    <string name="vehicle_power_off_cannot_operating">车辆已下电，请上电后再操作</string>
    <string name="wiper_interval_tips">调节雨刮的间歇时间，1档~5档的间歇时间分别2秒，4秒，8秒，10秒，13秒</string>
    <string name="accompany_me_home_tips">设置锁车后大灯延时熄灭的时间</string>
    <string name="brightness_tips">车上按键背光灯亮度，有5档可选，值越大按键背光越亮</string>
    <string name="active_ventilation">解锁主动通风</string>
    <string name="unlock_when_parking_tips">功能打开后，驻车时系统自动解锁</string>
    <string name="low_speed_tips">功能打开后，当车速低于20km/h，低速行人报警系统将对临近的车辆行人发出警示音，警示行人注意安全</string>
    <string name="brake_disc_wiping_tips">启动该功能后，帮助除去制动盘上的水膜</string>
    <string name="vehicle_power_off_tips">下电后车辆所有功能和屏幕将被关闭，踩下制动踏板将重新上电点亮屏幕！</string>
    <string name="electronic_parking_mode_tips">换总成零部件时请选择维修模式，故障拖车时请选择拖车模式，其他选择正常模式！</string>
    <string name="tire_pressure_learning_tips">更换轮胎后，需要点胎压学习来完成轮胎胎压监测系统的重设！</string>
    <string name="tire_pressure_reset_tips">在胎压异常后请按胎压复位重置胎压监测系统！</string>
    <string name="fast_click">您点得太快了，请勿频繁点击！</string>
    <string name="tire_pressure_reset">胎压复位</string>
    <string name="send_tire_pressure_reset_request">是否要发送胎压复位请求？</string>
    <string name="charging_current_tips">电流更大慢充更快，电流更小慢充时电路负载更低</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="charging_start">充电开始</string>
    <string name="charging_end">充电结束</string>
    <string name="tomorrow">次日</string>
    <string name="smart_high_beam">智能远光灯</string>
    <string name="smart_high_beam_tips">开启时，有前车或对面车道来车，远近光灯将自动切换！</string>
    <string name="avoid_big_cars">避让大车</string>
    <string name="lateral_warning_aid">侧向盲区辅助</string>
    <string name="forward_collision_warning_and_emergency_braking">前向碰撞预警及紧急制动</string>
    <string name="active_ventilation_tips">解锁车辆后，自动开启空调通风模式，打开车门或5分钟后自动停止</string>
    <string name="collision_warning_braking_close">关闭“前向碰撞预警及紧急制动”后，即使发生前向碰撞风险，车辆将不再发出预警或制动。确认要关闭吗？</string>
    <string name="collision_warning">确认要设置为“仅预警”吗？</string>
    <string name="collision_braking">确认要设置为“仅制动”吗？</string>
    <string name="welcome_to_unlock_tips">功能打开后，钥匙接近车辆自动解锁</string>
    <string name="away_from_blocking_tips">功能打开后，当车辆检测到钥匙远离后自动闭锁</string>
    <string name="blocking_horn_tips">功能打开后，锁车成功后会鸣笛一声</string>
    <string name="lcc_lane_keeping_tips">车辆会辅助控制方向，保持在车道中间，这个过程中你需要关注路面和握紧方向盘。</string>
    <string name="avoid_big_cars_tips">若相邻车道的大型车辆过于靠近而存在潜在风险，车辆会在车道内向另一侧平缓偏移，如果另一侧车道有车辆行驶，则不触发避让机制。</string>
    <string name="lane_departure_warning_tips">仅预警：前方道路清晰情况下，当检测到偏离车道时，车辆将发出视觉和声音提醒。\n 仅振动：在上述情况下，车辆方向盘将会发出振动。\n预警并振动：在上述情况下，车辆方向盘发出振动，同时发出视觉和声音提醒。</string>
    <string name="lane_correction_assistance_tips">前方道路清晰情况下，当检测到偏离车道时，车辆将会自动轻微转向，以保持在车道内。</string>
    <string name="emergency_lane_keeping_tips">车辆实时监测自车在当前车道行驶的姿态，当检测到驾驶员无意间偏离车道或即\n将变道，且相邻车道车辆存在潜在碰撞风险时，将会预先调整方向，以减小碰撞\n风险。</string>
    <string name="forward_warning_aid_tips">仅预警：当检测到前方有碰撞风险时，车辆将发出视觉和声音提醒。\n仅制动：如果碰撞风险较高，自动紧急制动将会介入以减轻碰撞危害。 \n预警并制动：在上述情况下，车辆将发出视觉和声音提醒，同时自动紧急制动将会介入。</string>
    <string name="forward_warning_aid_tips2">若关闭或为仅预警、仅制动，车辆在下一次上电将会自动设置为预警并制动。</string>
    <string name="blind_spot_detection_tips">车速高于15km/h时。当检测到后方盲区的运动物体有潜在碰撞风险时，车辆将会发出视觉和声音提醒。</string>
    <string name="door_opening_warning_tips">车速低于5km/h时，当检测到侧后方盲区的运动物体有潜在碰撞风险时，车辆将会发出视觉提醒；当打开车门时，车辆将会发出视觉和声音提醒。</string>
    <string name="rear_collision_warning_tips">当检测后方有运动物体快速靠近本车，有碰撞、追尾的风险时，车辆将会发出视觉和声音提醒。</string>
    <string name="astern_traverse_warning_tips">在倒车车速低于10km/h时，当检测到与后方横向穿行的物体有碰撞风险时，车辆将发出视觉和声音提醒。</string>
    <string name="over_speed_warning_tips">车辆自动识别道路上的限速标识，当车速超过当前道路限速，将发出视觉和声音提醒。</string>
    <string name="speed_limit_identification_aid_tips1">车辆自动识别道路上的限速标识，并实时显示在仪表上。</string>
    <string name="speed_limit_identification_aid_tips2">在特殊环境下（如大雾，雨雪天气），功能可能受到影响。</string>
    <string name="setup_failure">设置失败,请重试</string>
    <string name="target_battery_power_lower">目标电量低于当前电池电量，\n是否确认保持该设置？</string>
    <string name="reservation_information">预约信息</string>
    <string name="reservation_charging_model">预约充电方式</string>
    <string name="single">单次</string>
    <string name="cyclic">循环</string>
    <string name="pressed_first">请先踩住制动踏板再操作！</string>
    <string name="hour_dialog">时</string>
    <string name="minute_dialog">分</string>
    <string name="charge_to_100">建议充至100%，以便校准电池平衡</string>
    <string name="country">国家</string>
    <string name="china">中国</string>
    <string name="france">法国</string>
    <string name="germany">德国</string>
    <string name="italy">意大利</string>
    <string name="netherlands">荷兰</string>
    <string name="belgium">比利时</string>
    <string name="luxembourg">卢森堡</string>
    <string name="denmark">丹麦</string>
    <string name="ireland">爱尔兰</string>
    <string name="greece">希腊</string>
    <string name="portugal">葡萄牙</string>
    <string name="spain">西班牙</string>
    <string name="austria">奥地利</string>
    <string name="sweden">瑞典</string>
    <string name="finland">芬兰</string>
    <string name="malta">马耳他</string>
    <string name="cyprus">塞浦路斯</string>
    <string name="poland">波兰</string>
    <string name="hungary">匈牙利</string>
    <string name="czech_republic">捷克</string>
    <string name="slovakia">斯洛伐克</string>
    <string name="slovenia">斯洛文尼亚</string>
    <string name="estonia">爱沙尼亚</string>
    <string name="latvia">拉脱维亚</string>
    <string name="lithuania">立陶宛</string>
    <string name="romania">罗马尼亚</string>
    <string name="bulgaria">保加利亚</string>
    <string name="croatia">克罗地亚</string>
    <string name="britain">英国</string>
    <string name="norway">挪威</string>
    <string name="switzerland">瑞士</string>
    <string name="other">其他</string>
    <string name="lcc_lane_keeping_open">此功能开启后，当激活车道居中辅助（LCC）时，\n车辆会辅助控制方向，保持在车道中间，确认要开启吗？</string>
    <string name="open_lane_keeping_lcc">开启车道居中辅助（LCC）</string>
    <string name="please_set_charging_date">请及时设置预约充电时间，否则无法开启该功能！</string>
</resources>