<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_car_set">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wiper_interval"
            android:textColor="@color/title_text_color"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/iv_wiper_interval_tips"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_tips" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_wiper"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="27dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="37dp"
        android:background="@drawable/bg_segmented_view">

        <TextView
            android:id="@+id/tv_wiper_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/gear_1"
            android:textColor="@color/tab_unselect_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_wiper_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gear_2"
            android:textColor="@color/tab_unselect_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_wiper_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gear_3"
            android:textColor="@color/tab_unselect_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_wiper_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gear_4"
            android:textColor="@color/tab_unselect_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_wiper_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gear_5"
            android:textColor="@color/tab_unselect_text_color"
            android:textSize="18sp" />

    </LinearLayout>
</merge>