<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_car_set">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_backlight_brightness"
            android:textColor="@color/title_text_color"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/iv_brightness_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_tips" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_key_back_light"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="27dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="39dp"
        android:background="@drawable/bg_segmented_view">

        <TextView
            android:id="@+id/tv_key_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/gear_1"
            android:textColor="@color/tab_unselect_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_key_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gear_2"
            android:textColor="@color/tab_unselect_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_key_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gear_3"
            android:textColor="@color/tab_unselect_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_key_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gear_4"
            android:textColor="@color/tab_unselect_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_key_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gear_5"
            android:textColor="@color/tab_unselect_text_color"
            android:textSize="18sp" />

    </LinearLayout>
</merge>