<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="474dp"
        android:layout_height="210dp"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/vehicle_power_off"
            android:textColor="@color/title_text_color"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/power_off_fail"
            android:textColor="@color/tab_unselect_text_color"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tv_i_see"
                android:layout_width="161dp"
                android:layout_height="57dp"
                android:background="@drawable/bg_btn_confirm"
                android:gravity="center"
                android:text="@string/i_see"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>